midt.css
/* ... */
.background-gray-60 {
  background-color: #8d98aa;
}

.background-gray-70 {
  background-color: #707a89;
}

.background-gray-80 {
  background-color: #59616e;
}

.background-gray-90 {
  background-color: #444b55;
}

.border-black-base {
  color: #1e2025;
}

.border-black-black {
  color: #000000;
}

.border-white-base {
  color: #fffdfa;
}

.border-white-white {
  color: #ffffff;
}

.border-blue-base {
  color: #3071d9;
}

.border-blue-10 {
  color: #eef4fc;
}

.border-blue-20 {
  color: #cfe0fc;
}

.border-blue-30 {
  color: #abcafc;
}

.border-blue-40 {
  color: #85b2fa;
}

.border-blue-50 {
  color: #5691f0;
}

.border-blue-60 {
  color: #3071d9;
}

.border-blue-70 {
  color: #1d5bbf;
}

.border-blue-80 {
  color: #114497;
}

.border-blue-90 {
  color: #103570;
}

.border-green-base {
  color: #2a844e;
}

.border-green-10 {
  color: #e0faeb;
}

.border-green-20 {
  color: #abedc5;
}

.border-green-30 {
  color: #7bdba1;
}

.border-green-40 {
  color: #56c281;
}

.border-green-50 {
  color: #3ba064;
}

.border-green-60 {
  color: #2a844e;
}

.border-green-70 {
  color: #20693e;
}

.border-green-80 {
  color: #1a5130;
}

.border-green-90 {
  color: #153d25;
}

.border-red-base {
  color: #de1b1b;
}

.border-red-10 {
  color: #faf0f0;
}

.border-red-20 {
  color: #fad6d6;
}

.border-red-30 {
  color: #fab7b7;
}

.border-red-40 {
  color: #fa8e8e;
}

.border-red-50 {
  color: #f55151;
}

.border-red-60 {
  color: #de1b1b;
}

.border-red-70 {
  color: #ba0d0d;
}

.border-red-80 {
  color: #900e0e;
}

.border-red-90 {
  color: #661414;
}

.border-bronze-base {
  color: #ad5f00;
}

.border-bronze-10 {
  color: #fcf3e8;
}

.border-bronze-20 {
  color: #fad7ae;
}

.border-bronze-30 {
  color: #f5bb75;
}

.border-bronze-40 {
  color: #e99c3f;
}

.border-bronze-50 {
  color: #d07a11;
}

.border-bronze-60 {
  color: #ad5f00;
}

.border-bronze-70 {
  color: #8c4e03;
}

.border-bronze-80 {
  color: #693d07;
}

.border-bronze-90 {
  color: #4c2f0b;
}

.border-gray-base {
  color: #8d98aa;
}

.border-gray-10 {
  color: #f5f7fa;
}

.border-gray-20 {
  color: #ebeff5;
}

.border-gray-30 {
  color: #dee3ed;
}

.border-gray-40 {
  color: #c8d0e0;
}

.border-gray-50 {
  color: #aeb9cb;
}

.border-gray-60 {
  color: #8d98aa;
}

.border-gray-70 {
  color: #707a89;
}

.border-gray-80 {
  color: #59616e;
}

.border-gray-90 {
  color: #444b55;
}

.border-width-medium {
  border-width: 1px;
}

.border-width-large {
  border-width: 2px;
}

.border-width-x-large {
  border-width: 4px;
}

.border-style-solid {
  border-style: solid;
}

.border-style-none {
  border-style: none;
}

.border-radius-xx-small {
  border-radius: 0px;
}

.border-radius-x-small {
  border-radius: 1px;
}

.border-radius-small {
  border-radius: 2px;
}

.border-radius-medium {
  border-radius: 4px;
}

.border-radius-large {
  border-radius: 8px;
}

.border-radius-x-large {
  border-radius: 16px;
}

.border-radius-pill {
  border-radius: 9999px;
}

.border-radius-circle {
  border-radius: 50%;
}

.border-top-solid {
  border-top: solid;
}

.border-top-none {
  border-top: none;
}

.border-right-solid {
  border-right: solid;
}

.border-right-none {
  border-right: none;
}

.border-bottom-solid {
  border-bottom: solid;
}

.border-bottom-none {
  border-bottom: none;
}

.border-left-solid {
  border-left: solid;
}

.border-left-none {
  border-left: none;
}

.border-all-none {
  border: none;
}

.margin-all-none {
  margin: 0;
}

.margin-all-xxx-small {
  margin: 2px;
}

.margin-all-xx-small {
  margin: 4px;
}

.margin-all-x-small {
  margin: 8px;
}

.margin-all-small {
  margin: 12px;
}

.margin-all-medium {
  margin: 16px;
}

.margin-all-large {
  margin: 24px;
}

.margin-all-x-large {
  margin: 32px;
}

.margin-all-xx-large {
  margin: 40px;
}

.margin-all-xxx-large {
  margin: 48px;
}

.margin-all-xxxx-large {
  margin: 72px;
}

.margin-top-none {
  margin-top: none;
}

.margin-top-xxx-small {
  margin-top: 2px;
}

.margin-top-xx-small {
  margin-top: 4px;
}

.margin-top-x-small {
  margin-top: 8px;
}

.margin-top-small {
  margin-top: 12px;
}

.margin-top-medium {
  margin-top: 16px;
}

.margin-top-large {
  margin-top: 24px;
}

.margin-top-x-large {
  margin-top: 32px;
}

.margin-top-xx-large {
  margin-top: 40px;
}

.margin-top-xxx-large {
  margin-top: 48px;
}

.margin-top-xxxx-large {
  margin-top: 72px;
}

.margin-right-none {
  margin-right: none;
}

.margin-right-xxx-small {
  margin-right: 2px;
}

.margin-right-xx-small {
  margin-right: 4px;
}

.margin-right-x-small {
  margin-right: 8px;
}

.margin-right-small {
  margin-right: 12px;
}

.margin-right-medium {
  margin-right: 16px;
}

.margin-right-large {
  margin-right: 24px;
}

.margin-right-x-large {
  margin-right: 32px;
}

.margin-right-xx-large {
  margin-right: 40px;
}

.margin-right-xxx-large {
  margin-right: 48px;
}

.margin-right-xxxx-large {
  margin-right: 72px;
}

.margin-bottom-none {
  margin-bottom: none;
}

.margin-bottom-xxx-small {
  margin-bottom: 2px;
}

.margin-bottom-xx-small {
  margin-bottom: 4px;
}

.margin-bottom-x-small {
  margin-bottom: 8px;
}

.margin-bottom-small {
  margin-bottom: 12px;
}

.margin-bottom-medium {
  margin-bottom: 16px;
}

.margin-bottom-large {
  margin-bottom: 24px;
}

.margin-bottom-x-large {
  margin-bottom: 32px;
}

.margin-bottom-xx-large {
  margin-bottom: 40px;
}

.margin-bottom-xxx-large {
  margin-bottom: 48px;
}

.margin-bottom-xxxx-large {
  margin-bottom: 72px;
}

.margin-left-none {
  margin-left: none;
}

.margin-left-xxx-small {
  margin-left: 2px;
}

.margin-left-xx-small {
  margin-left: 4px;
}

.margin-left-x-small {
  margin-left: 8px;
}

.margin-left-small {
  margin-left: 12px;
}

.margin-left-medium {
  margin-left: 16px;
}

.margin-left-large {
  margin-left: 24px;
}

.margin-left-x-large {
  margin-left: 32px;
}

.margin-left-xx-large {
  margin-left: 40px;
}

.margin-left-xxx-large {
  margin-left: 48px;
}

.margin-left-xxxx-large {
  margin-left: 72px;
}
/* ... */

